up and running with apollo and link-state

--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "ssr:serve": "vue-cli-service ssr:serve",
-    "ssr:build": "vue-cli-service ssr:build",
-    "ssr:start": "cross-env NODE_ENV=production vue-cli-service ssr:serve --mode production"
+    "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
     "apollo-boost": "^0.1.15",
@@ -29,12 +26,10 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vue-server-renderer": "^2.5.16",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@akryum/vue-cli-plugin-ssr": "^0.2.3",
     "@types/chai": "^4.1.0",
     "@types/mocha": "^5.2.4",
     "@vue/cli-plugin-babel": "^3.0.1",
@@ -48,6 +43,7 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
     "typescript": "^3.0.0",
+    "vue-cli-plugin-vuetify": "^0.1.6",
     "vue-template-compiler": "^2.5.17"
   }
 }
