--- a/server/package.json
+++ b/server/package.json
@@ -4,21 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec node_modules/.bin/ts-node src --watch src --ext ts, graphql"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.0",
+    "apollo-server": "^2.0.7",
+    "apollo-server-express": "^2.0.6",
     "graphql": "^14.0.2",
     "graphql-cli": "^2.16.7",
     "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
-    "pm2": "^3.0.4"
+    "neo4j-driver": "^1.6.3",
+    "neo4j-graphql-js": "^0.2.0"
+  },
+  "optionalDependencies": {
+    "bcrypt": "latest"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "nodemon": "^1.18.4",
     "ts-node": "^7.0.1",
     "tsc-watch": "^1.0.27",
