--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^2.0.6",
     "graphql": "^14.0.2",
     "graphql-cli": "^2.16.7",
+    "graphql-import": "^0.7.1",
     "graphql-tools": "^3.1.1",
     "graphql-yoga": "^1.16.2",
     "jsonwebtoken": "^8.3.0",
