--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "apollo-boost": "^0.1.15",
     "apollo-cache-inmemory": "^1.2.9",
+    "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.4.1",
     "apollo-link": "^1.2.2",
     "apollo-link-context": "^1.0.8",
@@ -20,15 +21,15 @@
     "apollo-link-state": "^0.4.1",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.9.2",
-    "vue-apollo": "^3.0.0-beta.24",
-    "vuetify": "^1.2.3",
-    "vuex-router-sync": "^5.0.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-apollo": "^3.0.0-beta.24",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuetify": "^1.2.3",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
