--- a/server/package.json
+++ b/server/package.json
@@ -4,31 +4,34 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec node_modules/.bin/ts-node src --watch src"
+    "start": "npm run pm2",
+    "production": "echo \"i wish i had a weapon...\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.0.7",
-    "apollo-server-express": "^2.0.6",
+    "apollo-server": "^2.2.6",
     "graphql": "^14.0.2",
-    "graphql-cli": "^2.16.7",
+    "graphql-cli": "^2.17.0",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^3.1.1",
-    "graphql-yoga": "^1.16.2",
-    "jsonwebtoken": "^8.3.0",
-    "neo4j-driver": "^1.6.3",
-    "neo4j-graphql-js": "^0.2.0"
+    "jsonwebtoken": "^8.4.0",
+    "neo4j-driver": "^1.7.2",
+    "neo4j-graphql-js": "^0.2.1",
+    "shortid": "^2.2.14"
   },
   "optionalDependencies": {
-    "bcrypt": "latest"
+    "bcrypt": "latest",
+    "pm2": "^3.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^2.0.0",
     "@types/express": "^4.16.0",
-    "nodemon": "^1.18.4",
+    "@types/jsonwebtoken": "^7.2.8",
+    "@types/shortid": "0.0.29",
+    "nodemon": "^1.18.8",
     "ts-node": "^7.0.1",
-    "tsc-watch": "^1.0.27",
-    "typescript": "^3.0.3"
+    "typescript": "^3.2.2"
   }
 }
